2010-04-06  Andrew Scherkus  <scherkus@chromium.org>

        Unreviewed, cleaning up media layout test expectations.

        Mostly correcting bug numbers, updating comments, and fixing expectations.

        * platform/chromium/test_expectations.txt:

2010-04-01  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Darin Adler.

        Fix bug: CSS3 :not selector with ID simple selector sequence test fails
        https://bugs.webkit.org/show_bug.cgi?id=36276

        * fast/css/invalid-not-with-simple-selector-sequence-expected.txt: Added.
        * fast/css/invalid-not-with-simple-selector-sequence.html: Added.

2010-04-06  Darin Adler  <darin@apple.com>

        REGRESSION (r57109): editing/pasteboard/drag-image-to-contenteditable-in-iframe.html fails on Windows
        https://bugs.webkit.org/show_bug.cgi?id=37157

        * platform/win/editing/pasteboard/drag-image-to-contenteditable-in-iframe-expected.txt:
        Copied from platform/mac/editing/pasteboard/drag-image-to-contenteditable-in-iframe-expected.txt.
        Windows gets a different result than Mac because the dragging code ends up making the src attribute
        of the dragged element have a full path on Windows, but not on Mac.

2010-04-06  Bryan Yeung  <bryeung@chromium.org>

        Reviewed by Dimitri Glazkov.

        Update chromium expectations for passing Linux tests.

        * platform/chromium/test_expectations.txt:

2010-04-06  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Update Chromium test expectations for fast/dom/error-to-string-stack-overflow.html.

        * platform/chromium-mac/fast/dom/error-to-string-stack-overflow-expected.txt:
        * platform/chromium-win/fast/dom/error-to-string-stack-overflow-expected.txt:
        * platform/chromium/test_expectations.txt:

2010-04-06  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: The JS code can be not optimal from memory usage point of view.