@@ -1,3 +1,15 @@
+2010-04-06  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Beth Dakin.
+
+        aria-label doesn't work on image map area
+        https://bugs.webkit.org/show_bug.cgi?id=36977
+
+        Test: platform/mac/accessibility/area-with-aria-label.html
+
+        * accessibility/AccessibilityImageMapLink.cpp:
+        (WebCore::AccessibilityImageMapLink::accessibilityDescription):
+
 2010-04-06  James Robinson  <jamesr@chromium.org>
 
         Reviewed by Simon Fraser.
