@@ -1,3 +1,13 @@
+2010-04-06  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Beth Dakin.
+
+        aria-label doesn't work on image map area
+        https://bugs.webkit.org/show_bug.cgi?id=36977
+
+        * platform/mac/accessibility/area-with-aria-label-expected.txt: Added.
+        * platform/mac/accessibility/area-with-aria-label.html: Added.
+
 2010-04-06  Andrew Scherkus  <scherkus@chromium.org>
 
         Unreviewed, cleaning up media layout test expectations.
